syntax = "proto3";

package bolanos.domain.v1;

option java_package = "org.bolanos.domain.v1";
option java_multiple_files = true;

message BalanceCheckRequest {
  int32 account_number = 1;
}

message BalanceAddRequest {
  int32 account_number = 1;
  int32 amount =2;
}

message BalanceDeductRequest {
  int32 account_number = 1;
  int32 amount =2;
}

message Balance {
  int32 account = 1;
  int32 amount = 2;
}

service BankService {
  rpc get_balance(BalanceCheckRequest) returns (Balance) {};
  rpc add_balance(BalanceAddRequest) returns(Balance){};
  rpc deduct_balance(BalanceDeductRequest) returns (Balance) {};
}